<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#f1e9e3"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_margin="5dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/delete"
        android:id="@+id/img_Close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_below="@+id/img_Close"
        android:orientation="vertical"
        android:id="@+id/emty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/emty1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="phone"
                android:layout_margin="10dp"
                android:id="@+id/edt_PhoneNumber"
                android:hint="@string/hint_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"  />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_margin="10dp"
                android:layout_below="@+id/edt_PhoneNumber"
                android:id="@+id/edt_VerifyCode"
                android:hint="@string/hint_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"  />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <ProgressBar
        android:layout_centerHorizontal="true"
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyle"
        android:visibility="gone"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_below="@+id/emty"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_weight="1"
            android:id="@+id/btn_Login"
            android:text="@string/login_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:layout_weight="1"
            android:id="@+id/btn_Verify"
            android:text="@string/verify_phone_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:layout_weight="1"
            android:id="@+id/btn_Resend"
            android:text="@string/resend_phone_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</RelativeLayout>