<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#c9dfc5"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.quang.projectappcoffee.ui.InfoActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_info"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#549445"
        android:theme="@style/Theme.Design.NoActionBar"
        app:title="Info" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="#000"
            android:id="@+id/emty"
            android:text="@string/nameStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textAlignment="center"
            android:id="@+id/nameStore"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_toEndOf="@+id/emty"
            android:text="@string/project_app_coffee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/emty1"
            android:layout_below="@+id/emty"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            android:textColor="#000"
            android:text="@string/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtAddressInfo"
            android:textColor="#000"
            android:text="@string/address_description"
            android:textAlignment="center"
            android:textSize="20sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/nameStore"
            android:layout_toEndOf="@+id/emty1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/emty2"
            android:textColor="#000"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/txtAddressInfo"
            android:textSize="20sp"
            android:text="@string/hotline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_toLeftOf="@+id/imgPhoneCall"
            android:id="@+id/txtPhoneInfo"
            android:text="0966764041"
            android:textColor="#000"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/emty2"
            android:layout_below="@id/txtAddressInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/txtAddressInfo"
            android:id="@+id/imgPhoneCall"
            android:layout_alignParentEnd="true"
            android:src="@drawable/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <fragment
            android:layout_below="@+id/imgPhoneCall"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/map"
            tools:context=".MapsActivity"
            android:name="com.google.android.gms.maps.SupportMapFragment" />

    </RelativeLayout>

</LinearLayout>
