<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e2e2da"
    tools:context="com.example.quang.projectappcoffee.ui.OrderScreen">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_order"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
       android:background="#06a663"
        android:theme="@style/Theme.Design.NoActionBar"
        app:title="@string/title_toobar_Order"
       />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/emty"
            android:text=""
            android:layout_width="33dp"
            android:layout_height="wrap_content" />
        <TextView
            android:paddingStart="40dp"
            android:textAlignment="center"
            android:layout_toRightOf="@+id/emty"
            android:id="@+id/emty1"
            android:text="Name"
            android:layout_width="120dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginStart="20dp"
            android:textAlignment="center"
            android:layout_toRightOf="@+id/emty1"
            android:id="@+id/emty2"
            android:text="Amount"
            android:layout_width="50dp"
            android:layout_height="wrap_content" />
        <TextView
            android:textAlignment="center"
            android:layout_toRightOf="@+id/emty2"
            android:id="@+id/emty3"
            android:text="Price"
            android:layout_width="50dp"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:layout_below="@+id/emty"
            android:layout_marginBottom="5dp"
            android:id="@+id/list_order"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/layout_order" />

        <LinearLayout
            android:id="@+id/layout_order"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
            <Button
                android:textColor="#f5f5f5"
                android:textSize="20sp"
                android:paddingRight="70dp"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:background="@drawable/total"
                android:text="@string/order_Order"
                android:id="@+id/btnSubmit_Order"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
            <LinearLayout
                android:background="#0080c2ac"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:layout_marginLeft="10dp"
                    android:textColor="#1836a3"
                    android:layout_gravity="center"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_Order"
                    android:textSize="20sp" />

                <TextView
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="#f40004"
                    android:layout_gravity="center"
                    android:id="@+id/total_order"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>
